added leaflet map to contact page

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8"/>
     <title>Kontakt</title>
     <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
   </head>
   <body>
     <div class="container">
@@ -46,7 +48,20 @@
                 <img src="images/pic_1.jpeg">
               </figure>
             </div>
+            
+        </div>
+        <div class="location-map">
+          <div class="location-description">
+            <h1>Wir sind hier!</h1>
+            <p>Text description akdkadkaöldfjaölej</p>
+          </div>
+          <div id="mapid">
+  
+          </div>
         </div>
     </div>
+    
+
+    <script src="map.js"></script>
   </body>
 </html>
